prevent child elements collapse in resume, fixed the same for mobile, removed contact button not being pressed issue.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -837,6 +837,10 @@ section{
   .submit-button{
     margin-bottom: 65px;
   }
+  .resume-side-bar .text-block{
+    padding-top: 0px;
+  }
+
 }
 @media only screen and (max-height: 550px){
   .about-text{
